# flaskblockly

flaskblockly/: README.md  flaskblockly.py  pyproject.toml
flaskblockly/static/: bar.html  foo.html
tests/: app.py
tests/blockly_static/: foo.html
