[project]
name = "flaskblockly"
version = "0.0.7"
authors = [
  { name="Andrei Micuda", email="andrei.micuda@gmail.com" },
]
description = "A package that adds Blockly Automation to a flask API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "*.py",
  "/static",
]